--- a/moderation/package.json
+++ b/moderation/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.13",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.7"
