--- a/event-bus/package.json
+++ b/event-bus/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.ts"
+    "start": "nodemon index.ts",
+    "build": "tsc",
+    "start-prod": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
