--- a/infra/k8s/client.yaml
+++ b/infra/k8s/client.yaml
@@ -1,39 +1,39 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: posts
+  name: client
 
 spec:
   replicas: 1
 
   selector:
     matchLabels:
-      name: posts
+      name: client
 
   template:
     metadata:
-      name: posts
+      name: client
       labels:
-        name: posts
+        name: client
     spec:
       containers:
-        - name: posts
-          image: regmicmahesh/microsvc-posts
+        - name: client
+          image: regmicmahesh/microsvc-client
           ports:
-            - containerPort: 4000
+            - containerPort: 3000
 
 ---
 apiVersion: v1
 kind: Service
 
 metadata:
-  name: posts-svc
+  name: client-svc
 spec:
   type: ClusterIP
   selector:
-    name: posts
+    name: client
   ports:
-    - name: posts
+    - name: client
       protocol: TCP
-      port: 4000
-      targetPort: 4000
+      port: 3000
+      targetPort: 3000
