--- a/infra/k8s/query.yaml
+++ b/infra/k8s/query.yaml
@@ -1,39 +1,39 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: posts
+  name: query
 
 spec:
   replicas: 1
 
   selector:
     matchLabels:
-      name: posts
+      name: query
 
   template:
     metadata:
-      name: posts
+      name: query
       labels:
-        name: posts
+        name: query
     spec:
       containers:
-        - name: posts
-          image: regmicmahesh/microsvc-posts
+        - name: query
+          image: regmicmahesh/microsvc-query
           ports:
-            - containerPort: 4000
+            - containerPort: 4002
 
 ---
 apiVersion: v1
 kind: Service
 
 metadata:
-  name: posts-svc
+  name: query-svc
 spec:
   type: ClusterIP
   selector:
-    name: posts
+    name: query
   ports:
-    - name: posts
+    - name: query
       protocol: TCP
-      port: 4000
-      targetPort: 4000
+      port: 4002
+      targetPort: 4002
